
[metadata]
name = logo
description = A simple pygame implementation of the LOGO programming language.
author = Ethan Evans
platforms = unix, linux, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    logo
install_requires = []
python_requires =
    >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    mypy>=0.910

[options.package_data]
logo=py.typed

[flake8]
max-line-length=160
